[project]
name = "sd-advanced-grid"
version = "0.1.0"
description = "An extension for AUTOMATIC1111 Stable Diffusion WebUI to generate variants"
authors = ["micky2be"]
license = "MIT"
readme = "README.md"
packages = [{include = "sd_advanced_grid"}]

[project.urls]
Source = "https://github.com/micky2be/a1111-sd-advanced-grid"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
builtins = ["modules"]
namespace-packages = ["../../modules"]
target-version = "py310"
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "C",  # ?
]
line-length = 150
extend-select = [
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "Q", # flake8-quotes
  "I", # isort
  "IC", # import convention
  "N", # pep8-naming
  "SIM", # simplify
  "UP", # pyupgrade
  "PL", # Pylint
  "PTH", # flake8-use-pathlib
  "TCH", # flake8-type-checking
  "RET", # flake8-return
  "ARG", # flake8-unused-arguments
]
ignore = [
  "PLR0913" # SD extensions got lots of arguments by design
]
format = "grouped"

[tool.ruff.per-file-ignores]
"axis_options.py" = [
  "E501", # long lines by design
]

[tool.ruff.isort]
known-first-party = ["modules"]